own-tutorial/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytomcat8webapp-deployment
  labels:
    app: mytomcat8webapp
spec:
  selector:
    matchLabels:
      app: mytomcat8webapp
  template:
    metadata:
      labels:
        app: mytomcat8webapp
    spec:
      containers:
      - name: tomcat8
        image: localhost:32000/mytomcat8webapp:registry
        ports:
        - containerPort: 8080
          protocol: TCP
