own-tutorial/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytomcat8webapp-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: mytomcat8webapp
  type: NodePort
